--- a/Proyecto/Base.lproj/Main.storyboard
+++ b/Proyecto/Base.lproj/Main.storyboard
@@ -48,24 +48,233 @@
             <point key="canvasLocation" x="135.1145038167939" y="3.5211267605633805"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="vGY-Tw-5nf">
+        <scene sceneID="WJp-dE-aWT">
             <objects>
-                <viewController id="fIB-04-2Ak" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8f4-bo-19o">
+                <viewController id="6uk-YK-s0c" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PNM-e5-fVK">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="mLg-3J-M3F"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q9l-T4-5hB">
+                                <rect key="frame" x="45" y="139" width="122" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="seH-vH-bBl">
+                                <rect key="frame" x="49" y="270" width="118" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Informacion"/>
+                                <connections>
+                                    <segue destination="xmv-2t-EGX" kind="show" id="hFz-Az-oSg"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3sP-OG-HxT">
+                                <rect key="frame" x="45" y="339" width="122" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O3z-lh-V8q">
+                                <rect key="frame" x="49" y="470" width="118" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Informacion"/>
+                                <connections>
+                                    <segue destination="eRb-X8-3p6" kind="show" id="dwN-pK-9j7"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YqM-WR-ly0">
+                                <rect key="frame" x="225" y="139" width="122" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sVP-Lf-K5u">
+                                <rect key="frame" x="229" y="270" width="115" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Informacion"/>
+                                <connections>
+                                    <segue destination="vvn-jK-ZHa" kind="show" id="ZOn-GN-qw0"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tve-n8-ivv">
+                                <rect key="frame" x="225" y="339" width="122" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rEN-v6-8bO">
+                                <rect key="frame" x="229" y="470" width="118" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Informacion"/>
+                                <connections>
+                                    <segue destination="DWD-OC-th0" kind="show" id="6eZ-in-HYl"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a0W-j2-Shx">
+                                <rect key="frame" x="225" y="545" width="122" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="enB-tJ-uL2">
+                                <rect key="frame" x="229" y="676" width="118" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Informacion"/>
+                                <connections>
+                                    <segue destination="LfS-St-oxJ" kind="show" id="4s3-6p-HPd"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8gd-w8-ZO5">
+                                <rect key="frame" x="45" y="545" width="122" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kUY-ky-YO4">
+                                <rect key="frame" x="49" y="676" width="118" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Informacion"/>
+                                <connections>
+                                    <segue destination="qiU-85-aoc" kind="show" id="ReM-HX-hXi"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="f1z-S4-sob"/>
+                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qwG-M9-a63" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="991.60305343511448" y="3.5211267605633805"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="gSF-Lk-x2U">
+            <objects>
+                <viewController id="LfS-St-oxJ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5Iy-6I-wPh">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="6eo-ma-WpN"/>
+                        <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="PEt-o3-jcH"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xLr-gf-Vzc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="135" y="668"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="tUt-Rp-uJH">
+            <objects>
+                <viewController id="qiU-85-aoc" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8T5-76-6qg">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="XmL-dV-2Ys"/>
+                        <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="tEd-8G-WfO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tth-AI-d8x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1019" y="668"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Azy-Xb-d0c">
+            <objects>
+                <viewController id="SxQ-2F-rAA" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="v4U-W9-0bq">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="uwB-6P-DAd"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tc7-oF-w9n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8n2-uW-e3X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="860" y="-47"/>
+            <point key="canvasLocation" x="1785" y="418"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="6Ng-4g-zQc">
+            <objects>
+                <viewController id="mdV-ut-KiQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6Lp-79-KfY">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="uLP-Ai-t6Y"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kcy-Nh-8rK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2555" y="418"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ahV-Dl-bkj">
+            <objects>
+                <viewController id="xmv-2t-EGX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qnU-qz-JXj">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="4MB-zX-RVD"/>
+                        <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="PAw-eI-2JY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6PZ-yg-04B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1787" y="-224"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="k5o-kq-UjF">
+            <objects>
+                <viewController id="vvn-jK-ZHa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vOG-Pd-6X0">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="hLW-ub-aVq"/>
+                        <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="A3i-jN-HUN"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8JU-la-Ie9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2556" y="-225"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="LwO-LO-hqq">
+            <objects>
+                <viewController id="eRb-X8-3p6" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="TTM-ty-3cq">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="FX2-ei-nta"/>
+                        <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ePU-Hg-jE9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="twh-1v-cW6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1785" y="418"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="41s-bA-gfX">
+            <objects>
+                <viewController id="DWD-OC-th0" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cSX-sa-elg">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="JZ9-lu-O0H"/>
+                        <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="iBt-ro-q6f"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xas-t8-B3l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2555" y="418"/>
         </scene>
     </scenes>
     <resources>
         <image name="LogoFes" width="208" height="242"/>
         <image name="LogoMac" width="290" height="174"/>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
